syntax = "proto3";
option go_package = "pb";


import "google/protobuf/any.proto";
import "google/protobuf/timestamp.proto";

message Message {
    MessageType messageType     = 1;
    string messageID            = 2;
    uint32 sequence             = 3;
    google.protobuf.Any payload = 4;

    enum MessageType {
        ACK                      = 0;
        PING                     = 1;
        CHAT_MESSAGE             = 2;
        CHAT_TYPING              = 3;
        CHAT_READ                = 4;
        FOLLOW                   = 5;
        UNFOLLOW                 = 6;
    }
}

message ChatMessage {
    string subject                      = 1;
    string message                      = 2;
    google.protobuf.Timestamp timestamp = 3;

    // Only used when Flag is READ.
    string readID                       = 4;
}

message AckMessage {
    string ackedMessageID = 1;
}